--- a/dada/templates/amazon_ses_requirements_widget.tmpl
+++ b/dada/templates/amazon_ses_requirements_widget.tmpl
@@ -1,13 +1,7 @@
 <!-- begin amazon_ses_requirements_widget.tmpl --> 
 
 <!-- tmpl_if amazon_ses_has_needed_cpan_modules --> 
-	
-		<div class="alert-box info radius">
-			<p id="has_needed_cpan_modules"> 
-				<!-- All needed CPAN modules are installed! -->
-			</p>
-		</div>
-	
+	<div id="has_needed_cpan_modules"></div>
 <!-- tmpl_else --> 
 	
 	<div class="alert-box info radius"> 
