--- a/dada/templates/error_no_admin_permissions_screen.tmpl
+++ b/dada/templates/error_no_admin_permissions_screen.tmpl
@@ -2,13 +2,12 @@
 
 <!-- tmpl_set name="title" value="Screen Disabled." -->
 
-<p>
-	This screen has been disabled, when Signing in with the List Password.
-</p>
-<p>
-	To access this screen, log in using the, <strong><!-- tmpl_var PROGRAM_NAME --> Root Password</strong>
-</p>
+<h1>Screen Disabled.</h1>
 
+<div class="alert-box warning radius">
+		This screen may only be accessed when logged in with the 
+		<strong><!-- tmpl_var PROGRAM_NAME --> Root Password</strong>.
+</div>
 
 
 <!-- end error_no_admin_permissions_screen.tmpl --> 
