--- a/dada/templates/mail_sending_options_screen.tmpl
+++ b/dada/templates/mail_sending_options_screen.tmpl
@@ -53,10 +53,9 @@
 		</div>
 	</div> 
 
-	<div id="sendmail_options" > 
+	<div id="sendmail_options" class="panel"> 
 	    <div class="row"> 
-			<div class="small-1  columns"></div>
-	        <div class="small-11 columns">
+	        <div class="small-12 columns">
 			    <input 
 					type="checkbox" 
 					name="add_sendmail_f_flag" 
@@ -106,12 +105,11 @@
 		</div> 
 	</div> 
 
-	<div id="smtp_preferences"> 
+	<div id="smtp_preferences"  class="panel"> 
 
 		<div id="general_smtp">
 			<div class="row"> 
-				<div class="small-1  columns"></div>
-		        <div class="small-11 columns">	
+		        <div class="small-12 columns">	
 					<label for="smtp_server">
 						SMTP Server
 					</label>
@@ -373,11 +371,10 @@
 				Amazon Simple Email Service
 			</label>
 			
-	<div id="amazon_ses_preferences">
+	<div id="amazon_ses_preferences"  class="panel">
 			
      		 <div class="row"> 
-     	 		<div class="small-1  columns"></div>
-     	         <div class="small-11 columns">	
+     	         <div class="small-12 columns">	
 			
 				<!-- tmpl_var amazon_ses_requirements_widget -->
 			
