--- a/dada/templates/plugins/screen_cache/view.tmpl
+++ b/dada/templates/plugins/screen_cache/view.tmpl
@@ -57,7 +57,9 @@
 				<input type="hidden" name="plugin" value="screen_cache" > 
 				<input type="hidden" name="prm" value="remove" >
 				<input type="hidden" name="filename" value="<!-- tmpl_var name -->" --> 
-				<input type="submit" class="alert small button" value="&#8855;">
+				<button type="submit" class="alert small button">
+					<i class="fi-stop"></i>
+				</button>
 			   </form> 
 			  </td> 
 			  <td>
