--- a/dada/templates/report_mass_mailing_errors_screen.tmpl
+++ b/dada/templates/report_mass_mailing_errors_screen.tmpl
@@ -3,9 +3,12 @@
 <!-- tmpl_set name="title" value="Problems Found in Email Message" -->
 
 <h3>Problems With Mass Mailing:</h3> 
-<p>
- Your message has <em>not</em> been sent.
-</p>
+
+
+<div class="alert-box warning radius">
+	Your message has <em>not</em> been sent.
+</div>
+
 
 <p>
  Additional information is below:
