--- a/dada/templates/view_list_viewport_widget.tmpl
+++ b/dada/templates/view_list_viewport_widget.tmpl
@@ -182,7 +182,9 @@
                  <input type="submit" name="process" class="small button"  value="&#8594; Move Selected Bouncing Address Back to Subscribers" >
                 </li>
                 <li>
-                 <input type="submit" name="process" class="small button"  value="&#8855; Remove Selected Bouncing Addresses" >
+                 <button type="submit" name="process" class="small button">
+            		 Remove Selected Bouncing Addresses <i class="fi-stop"></i>
+			     </button>
                 </li>
         <!-- /tmpl_if -->
     
