--- a/dada/templates/bounce_search_results_modal_menu.tmpl
+++ b/dada/templates/bounce_search_results_modal_menu.tmpl
@@ -25,7 +25,9 @@
 	
 
 <input type="submit" name="process" class="success button"  value="&#8594; Move Bouncing Address Back to Subscribers" >
-<input type="submit" name="process" class="warning button"  value="&#8855; Remove Bouncing Address" >
+
+<button type="submit" name="process" class="warning button">Remove Bouncing Address <i class="fi-stop"></i></button>
+
 </form>
 
 
