--- a/dada/templates/error_mismatch_ip_on_confirm_screen.tmpl
+++ b/dada/templates/error_mismatch_ip_on_confirm_screen.tmpl
@@ -9,7 +9,7 @@
 <input type="hidden" name="token"           value="<!-- tmpl_var t -->" > 
 <input type="hidden" name="simple_test" value="pass" > 
 <p class="text-center">	
-	<input type="submit"                    value="       &#187; Confirm! &#171;       " class="success bigger_button" > 
+	<input type="submit"                    value="&#187; Confirm &#171;" class="success large button" > 
 </p>
 
 </form> 
